<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Strings used in the manifest. -->
    <string name="app_name">blubb</string>
    <string name="activity_messages_title_text"> </string>
    <string name="activity_threads_title_text">blubb</string>
    <string name="activity_login_title_text">login</string>
    <string name="activity_settings_title_text">Settings</string>
    <string name="service_message_pull_label_text">BlubbService</string>

    <string name="x_btn_text">x</string>
    <string name="y_btn_text">Y</string>
    <string name="application_font">Exo2.0-Regular.otf</string>
    <string name="blubb_logo_description">blubb logo</string>

    <!-- Strings for the message pull service-->
    <string name="pref_message_pull_rate">Notification frequency</string>
    <string name="pref_message_pull_title">Notifications</string>
    <string name="alarm_service_started">NotificationsService</string>

    <!-- Names(keys) for preferences.-->
    <string name="pref_message_pull_interval">pref_message_pull_interval</string>
    <string name="pref_password">pref_password</string>
    <string name="pref_username">pref_username</string>

    <!-- Strings for the menu entries.-->
    <string name="menu_logout_text">
        Logout</string>
    <string name="menu_new_message_text">
        Create a new message</string>
    <string name="menu_login_text">
        Login</string>
    <string name="menu_reset_password_text">
        Reset password</string>
    <string name="menu_refresh_text">
        Refresh</string>
    <string name="menu_new_thread_text">
        New thread</string>

    <!-- Strings used in the login activity.-->
    <string name="login_activity_stay_logged_in_cb_text">
        Stay logged in?</string>
    <string name="login_activity_username_hint">
        Your username</string>
    <string name="login_activity_password_hint">
        Your password</string>
    <string name="login_activity_password_reset_hint">
        Your new password</string>
    <string name="login_activity_password__reset_confirm_hint">
        Confirm your new password</string>
    <string name="login_activity_sign_in_btn_text">
        Sign in</string>
    <string name="login_activity_reset_btn_text">
        Reset password</string>

    <!-- Strings used in the messages activity.-->
    <string name="messages_activity_input_create_message_hint">Say something</string>
    <string name="messages_activity_input_reply_hint">Reply to </string>

    <!-- Strings used in the create thread dialog.-->
    <string name="create_thread_dialog_title_hint">
        Title of your thread</string>
    <string name="create_thread_dialog_description_hint">
        Put in a simple description for your thread</string>
    <string name="create_thread_dialog_title_text">
        Create a new thread</string>
    <string name="create_thread_dialog_title_size_toast">
        The title must not be longer then 40 characters! But at least 1.</string>
    <string name="create_thread_dialog_description_lines_toast">
        The description must not have more then 3 lines.</string>
    <string name="create_thread_dialog_description_empty_toast">
        You must enter a description.</string>

    <!-- Strings used in the password init dialog.-->
    <string name="password_init_dialog_title_text">
        You must set your own password before you can proceed.</string>
    <string name="password_init_dialog_init_password_hint">
        Your init password</string>
    <string name="password_init_dialog_new_password_hint">
        Your new password</string>
    <string name="password_init_dialog_confirm_password_hint">
        Confirm your new password</string>

    <!-- Strings used in the logout warning dialog.-->
    <string name="logout_dialog_title_text">
        Do you really want to logout?</string>
    <string name="logout_dialog_positive_btn_text">
        Jupp</string>
    <string name="logout_dialog_negative_btn_text">
        Nooooo!</string>

    <!-- Toast to the user to confirm certain actions.-->
    <string name="set_thread_successfully_toast">
        Thread has been modified successfully</string>
    <string name="create_message_confirmation_toast">
        Created a new message.</string>
    <string name="modify_message_confirmation_toast">
        Modified message.</string>
    <string name="edit_thread_dialog_head_tv_text">
        Edit this thread.</string>
    <string name="login_pw_reset_ok_toast">
        Your password has been reset.\n
        You can now log in with your new password.</string>

    <!-- The messages for the user to each occurring exception. -->
    <string name="invalid_parameter_exception_message">
        The given parameter is not valid.\n
        Please enter again and ensure it is not empty.</string>
    <string name="blubb_db_exception_message">
        There went something terribly wrong. Run, run as fast as you can! 8-o </string>
    <string name="blubb_null_exception_message">
        A parameter must not be null.\nPlease enter again and ensure it is not empty.</string>
    <string name="blubb_db_connection_exception_message">
        Could not contact server.\nPlease check your internet connection.</string>
    <string name="password_init_exception_message">
        Your password has not been initialized yet.\n
        Please reset your password.</string>
    <string name="session_exception_message">
        Could not perform a login.\n
        Please log in manually and check whether your username and password are correct.</string>
    <string name="unknown_exception_message">
        An unknown exception occurred.\n
        If this happens again please contact your service.</string>
</resources>
